mb-k8s-manifest-vinodjagwani/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mb-service
  namespace: mb-namespace
spec:
  selector:
    app: mb-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
