mb-k8s-manifest-vinodjagwani/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mb-ingress
  namespace: mb-namespace
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - mb.com
      secretName: mb-secret
  rules:
    - host: mb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mb-service
                port:
                  number: 80
